# my-vul-web-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/specs/: app-foundation-plan.md  app-foundation.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/services/: auth_service.py
docs/prompts/: 4_spec_plan_execution_prompt
frontend/static/css/: styles.css
frontend/templates/: dashboard.html  login.html  signup.html
